--- a/Main.css
+++ b/Main.css
@@ -46,7 +46,7 @@ pre { font-family: consolas, monospace; }
 .nb{ font-style: italic; font-weight: bold; }
 /*background image */
 body {
-   background-image: url('images/background.jpg');
+   background-image: url('background.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed; 
   background-size: 100% 100%;
